--- a/index.html
+++ b/index.html
@@ -1,6 +1,40 @@
 <!doctype html>
+<html lang="en-US" prefix="og: http://ogp.me/ns# fb: http://ogp.me/ns/fb#" itemscope="itemscope" itemtype="http://schema.org/WebPage">
 <head>
+
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+
 <title>Frontend by Ben Marshall</title>
+<meta name="description" content="">
+
+<link rel="icon" href="" sizes="32x32" />
+<link rel="icon" href="" sizes="192x192" />
+<link rel="apple-touch-icon-precomposed" href="">
+<meta name="msapplication-TileImage" content="">
+
+<link rel="publisher" href="GOOGLE+ USER PROFILE URL">
+
+<meta property="og:locale" content="en_US">
+<meta property="og:type" content="article">
+<meta property="og:title" content="">
+<meta property="og:description" content="">
+<meta property="og:url" content="">
+<meta property="og:site_name" content="">
+
+<meta property="article:publisher" content="FACEBOOK PAGE URL">
+<meta property="fb:app_id" content="">
+<meta property="og:image" content="">
+<meta property="og:image:width" content="1200">
+<meta property="og:image:height" content="1200">
+
+<meta name="twitter:card" content="summary">
+<meta name="twitter:description" content="">
+<meta name="twitter:title" content="">
+<meta name="twitter:site" content="@TWITTER_USERNAME">
+<meta name="twitter:image" content="">
+<meta name="twitter:creator" content="@TWITTER_USERNAME">
+
 <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
