--- a/index.html
+++ b/index.html
@@ -5,22 +5,20 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
-<title>Frontend by Ben Marshall</title>
-<meta name="description" content="">
+<title>Frontend v1.0.0</title>
+<meta name="description" content="A light-weight, skeleton frontend framework.">
+<link rel="canonical" href="https://github.com/bmarshall511/frontend">
 
-<link rel="icon" href="" sizes="32x32" />
-<link rel="icon" href="" sizes="192x192" />
-<link rel="apple-touch-icon-precomposed" href="">
-<meta name="msapplication-TileImage" content="">
+<link rel="shortcut icon" href="favicon.ico">
 
-<link rel="publisher" href="GOOGLE+ USER PROFILE URL">
+<link rel="publisher" href="https://plus.google.com/u/0/+BenMarshall511">
 
 <meta property="og:locale" content="en_US">
 <meta property="og:type" content="article">
-<meta property="og:title" content="">
-<meta property="og:description" content="">
-<meta property="og:url" content="">
-<meta property="og:site_name" content="">
+<meta property="og:title" content="Frontend">
+<meta property="og:description" content="A light-weight, skeleton frontend framework.">
+<meta property="og:url" content="https://github.com/bmarshall511/frontend">
+<meta property="og:site_name" content="Frontend">
 
 <meta property="article:publisher" content="FACEBOOK PAGE URL">
 <meta property="fb:app_id" content="">
@@ -29,23 +27,34 @@
 <meta property="og:image:height" content="1200">
 
 <meta name="twitter:card" content="summary">
-<meta name="twitter:description" content="">
-<meta name="twitter:title" content="">
-<meta name="twitter:site" content="@TWITTER_USERNAME">
+<meta name="twitter:description" content="A light-weight, skeleton frontend framework.">
+<meta name="twitter:title" content="Frontend">
+<meta name="twitter:site" content="@bmarshall0511">
 <meta name="twitter:image" content="">
-<meta name="twitter:creator" content="@TWITTER_USERNAME">
+<meta name="twitter:creator" content="@bmarshall0511">
 
 <link rel="stylesheet" href="assets/css/style.css">
+
+<!-- DEMO STYLES - Can be removed & deleted -->
+<link rel="stylesheet" href="assets/css/demo.css">
+
 </head>
-<body>
+<body class="demo">
+<div class="demo__content align-center">
+  <h1>Frontend <span>v1.0.0</span></h1>
+  <p><em>A light-weight, skeleton frontend framework.</em></p>
+  <ul class="list-inline-block">
+    <li><a href="https://github.com/bmarshall511/frontend" class="icon-github-circled"></a>
+  </ul>
+</div>
 
 <!-- Requires jQuery -->
 <script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script>
 
-<!-- DEVELOPMENT global.js -->
+<!-- DEVELOPMENT - global.js -->
 <script src="assets/js/global.js"></script>
 
-<!-- PRODUCTION global.js -->
+<!-- PRODUCTION - global.js -->
 <!--<script src="assets/js/global.min.js"></script>-->
 </body>
 </html>
