Documentation & structure updates.

--- a/index.html
+++ b/index.html
@@ -5,14 +5,16 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
-<title>Frontend v1.0.0</title>
+<title>Frontend v1.0.1</title>
 <meta name="description" content="A light-weight, skeleton frontend framework.">
 <link rel="canonical" href="https://github.com/bmarshall511/frontend">
 
 <link rel="shortcut icon" href="favicon.ico">
 
+<!-- Google+ -->
 <link rel="publisher" href="https://plus.google.com/u/0/+BenMarshall511">
 
+<!-- Open Graph -->
 <meta property="og:locale" content="en_US">
 <meta property="og:type" content="article">
 <meta property="og:title" content="Frontend">
@@ -20,12 +22,14 @@
 <meta property="og:url" content="https://github.com/bmarshall511/frontend">
 <meta property="og:site_name" content="Frontend">
 
+<!-- Facebook -->
 <meta property="article:publisher" content="FACEBOOK PAGE URL">
 <meta property="fb:app_id" content="">
 <meta property="og:image" content="">
 <meta property="og:image:width" content="1200">
 <meta property="og:image:height" content="1200">
 
+<!-- Twitter -->
 <meta name="twitter:card" content="summary">
 <meta name="twitter:description" content="A light-weight, skeleton frontend framework.">
 <meta name="twitter:title" content="Frontend">
@@ -41,7 +45,7 @@
 </head>
 <body class="demo">
 <div class="demo__content align-center">
-  <h1>Frontend <span>v1.0.0</span></h1>
+  <h1>Frontend <span>v1.0.1</span></h1>
   <p><em>A light-weight, skeleton frontend framework.</em></p>
   <ul class="list-inline-block">
     <li><a href="https://github.com/bmarshall511/frontend" class="icon-github-circled"></a>
