--- a/example.html
+++ b/example.html
@@ -21,7 +21,7 @@
 <meta name="twitter:description" content="">
 <meta name="twitter:title" content="">
 
-<link rel="stylesheet" href="dist/css/style-example.css" media="all">
+<link rel="stylesheet" href="dist/css/style.css" media="all">
 </head>
 <body>
 
@@ -43,6 +43,15 @@
       <li>Ordered list element 3
     </ol>
 
+    <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo.</p>
+
+    <blockquote>
+      <p>Life is a bitch, wear a helmet.</p>
+      <footer>
+        Dennis Leary
+      </footer>
+    </blockquote>
+
     <hr>
 
     <h1>Headline 1</h1>
@@ -58,7 +67,11 @@
     <h6>Headline 6</h6>
     <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.</p>
 
+    <hr>
+
     <a href="#" class="button">Button</a>
+
+    <hr>
 
     <ul class="pager">
       <li class="pager-first"><a ref="#">First</a>
@@ -73,6 +86,37 @@
       <li class="pager-next"><a ref="#">Next</a>
       <li class="pager-last"><a ref="#">Last</a>
     </ul>
+
+    <hr>
+
+    <div class="table">
+      <div class="table-header">
+        <div class="table-row">
+          <div class="table-col">Col Header 1</div>
+          <div class="table-col">Col Header 2</div>
+          <div class="table-col">Col Header 3</div>
+        </div>
+      </div>
+      <div class="table-body">
+        <div class="table-row">
+          <div class="table-col">Value 1</div>
+          <div class="table-col">Value 2</div>
+          <div class="table-col">Value 3</div>
+        </div>
+        <div class="table-row">
+          <div class="table-col">Value 1</div>
+          <div class="table-col">Value 2</div>
+          <div class="table-col">Value 3</div>
+        </div>
+      </div>
+      <div class="table-footer">
+        <div class="table-row">
+          <div class="table-col">Col Footer 1</div>
+          <div class="table-col">Col Footer 2</div>
+          <div class="table-col">Col Footer 3</div>
+        </div>
+      </div>
+    </div>
   </div>
 </div>
 
