--- a/example.html
+++ b/example.html
@@ -27,6 +27,13 @@
 
 <div class="container">
   <div class="col-1-1 col-12-1-small">
+    <h1>Frontend Framework Example</h1>
+    <p>Below is an example of the default styles and JS functionality <a href="https://github.com/bmarshall511/frontend" target="_blank">Frontend</a> comes with when first installed.</p>
+
+    <hr>
+
+    <h2>General Typography</h2>
+
     <p><em>This text is enclosed by the <code>em</code> tag</em>, <a href="#">consectetuer adipiscing elit</a>. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo. <b>This text is enclosed in the <code>b</code> tag.</b></p>
 
     <ul>
@@ -43,7 +50,7 @@
       <li>Ordered list element 3
     </ol>
 
-    <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo.</p>
+    <p><span class="strikethrough">Lorem ipsum dolor sit amet</span>, consectetuer adipiscing elit. <span class="color-primary">Aenean commodo ligula eget dolor.</span> <span class="color-secondary">Aenean massa.</span> Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo.</p>
 
     <blockquote>
       <p>Life is a bitch, wear a helmet.</p>
@@ -52,26 +59,91 @@
       </footer>
     </blockquote>
 
+    <h3>Default Table</h3>
+    <table>
+      <thead>
+        <tr>
+          <th>Table Header 1</th>
+          <th>Table Header 2</th>
+          <th>Table Header 3</th>
+      </thead>
+      <tbody>
+        <tr><td>1</td><td>2</td><td>3</td></tr>
+        <tr><td>1</td><td>2</td><td>3</td></tr>
+        <tr><td>1</td><td>2</td><td>3</td></tr>
+        <tr><td>1</td><td>2</td><td>3</td></tr>
+      </tbody>
+      <tfoot>
+        <tr><td>1</td><td>2</td><td>3</td></tr>
+      </tfoot>
+    </table>
+
+    <h3>Stacked Table (mobile)</h3>
+    <table class="stack">
+      <thead>
+        <tr>
+          <th>Table Header 1</th>
+          <th>Table Header 2</th>
+          <th>Table Header 3</th>
+      </thead>
+      <tbody>
+        <tr><td>1</td><td>2</td><td>3</td></tr>
+        <tr><td>1</td><td>2</td><td>3</td></tr>
+        <tr><td>1</td><td>2</td><td>3</td></tr>
+        <tr><td>1</td><td>2</td><td>3</td></tr>
+      </tbody>
+      <tfoot>
+        <tr><td>1</td><td>2</td><td>3</td></tr>
+      </tfoot>
+    </table>
+
+    <h3>Hover Table</h3>
+    <table class="hover">
+      <thead>
+        <tr>
+          <th>Table Header 1</th>
+          <th>Table Header 2</th>
+          <th>Table Header 3</th>
+      </thead>
+      <tbody>
+        <tr><td>1</td><td>2</td><td>3</td></tr>
+        <tr><td>1</td><td>2</td><td>3</td></tr>
+        <tr><td>1</td><td>2</td><td>3</td></tr>
+        <tr><td>1</td><td>2</td><td>3</td></tr>
+      </tbody>
+      <tfoot>
+        <tr><td>1</td><td>2</td><td>3</td></tr>
+      </tfoot>
+    </table>
+
     <hr>
 
-    <h1>Headline 1</h1>
+    <h1>Headline 1 <small>Add a little style to it!</small></h1>
     <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.</p>
-    <h2>Headline 2</h2>
+    <h2>Headline 2 <small>Add a little style to it!</small></h2>
     <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.</p>
-    <h3>Headline 3</h3>
+    <h3>Headline 3 <small>Add a little style to it!</small></h3>
     <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.</p>
-    <h4>Headline 4</h4>
+    <h4>Headline 4 <small>Add a little style to it!</small></h4>
     <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.</p>
-    <h5>Headline 5</h5>
+    <h5>Headline 5 <small>Add a little style to it!</small></h5>
     <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.</p>
-    <h6>Headline 6</h6>
+    <h6>Headline 6 <small>Add a little style to it!</small></h6>
     <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.</p>
 
     <hr>
+
+    <h2>Frontend Framework Styles <code>_frontend.scss</code></h2>
+
+    <p>These styles can be included/removed in the <code>_style.scss</code>.</p>
+
+    <h3>Buttons</h3>
 
     <a href="#" class="button">Button</a>
 
     <hr>
+
+    <h3>Pager</h3>
 
     <ul class="pager">
       <li class="pager-first"><a ref="#">First</a>
@@ -88,6 +160,8 @@
     </ul>
 
     <hr>
+
+    <h3>Responsive Table</h3>
 
     <div class="table">
       <div class="table-header">
