--- a/demo.html
+++ b/demo.html
@@ -21,7 +21,7 @@
 <meta name="twitter:description" content="">
 <meta name="twitter:title" content="">
 
-<link rel="stylesheet" href="../dist/css/style.css" media="all">
+<link rel="stylesheet" href="dist/css/style.css" media="all">
 </head>
 <body>
 
@@ -313,7 +313,7 @@
   src="https://code.jquery.com/jquery-2.2.4.min.js"
   integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44="
   crossorigin="anonymous"></script>
-<script src="../dist/js/jquery.scrollTo.min.js"></script>
-<script src="../dist/js/global.js"></script>
+<script src="dist/js/jquery.scrollTo.min.js"></script>
+<script src="dist/js/global.js"></script>
 </body>
 </html>
