--- a/src/index.html
+++ b/src/index.html
@@ -21,7 +21,7 @@
 <meta name="twitter:description" content="">
 <meta name="twitter:title" content="">
 
-<link rel="stylesheet" href="dist/css/style.css" media="all">
+<link rel="stylesheet" href="css/style.css" media="all">
 </head>
 <body>
 
@@ -313,6 +313,6 @@
   src="https://code.jquery.com/jquery-2.2.4.min.js"
   integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44="
   crossorigin="anonymous"></script>
-<script src="dist/js/global.js"></script>
+<script src="js/global.js"></script>
 </body>
 </html>
