--- a/styleguide/item-frontend-components-alignment.html
+++ b/styleguide/item-frontend-components-alignment.html
@@ -41,23 +41,23 @@
 </div>
 <article role="main" class="kss-main">
 
-    <div id="kssref-frontend-components-common-table" class="kss-section kss-section--depth-4 is-fullscreen">
+    <div id="kssref-frontend-components-alignment" class="kss-section kss-section--depth-3 is-fullscreen">
 
       <div class="kss-style">
-        <h4 class="kss-title kss-title--level-4">
-          <a class="kss-title__permalink" href="#kssref-frontend-components-common-table">
+        <h3 class="kss-title kss-title--level-3">
+          <a class="kss-title__permalink" href="#kssref-frontend-components-alignment">
             <span class="kss-title__ref">
-              2.2.5.3
+              2.2.1
               <span class="kss-title__permalink-hash">
-                  #frontend.components.common.table
+                  #frontend.components.alignment
               </span>
             </span>
-            Responsive Table
+            Alignment Classes
           </a>
-        </h4>
+        </h3>
 
           <p class="kss-toolbar">
-            <a href="#kssref-frontend-components-common-table" data-kss-guides="true">
+            <a href="#kssref-frontend-components-alignment" data-kss-guides="true">
               <span class="kss-toolbar__tooltip">Toggle example guides</span>
               <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="100%" height="100%" viewBox="0 0 64 64">
                 <rect class="kss-toolbar__icon-fill" x="5" y="35" width="5" height="9"/>
@@ -78,7 +78,7 @@
                 <rect class="kss-toolbar__icon-fill" x="20" y="54" width="9" height="5"/>
               </svg>
             </a>
-            <a href="#kssref-frontend-components-common-table" data-kss-markup="true">
+            <a href="#kssref-frontend-components-alignment" data-kss-markup="true">
               <span class="kss-toolbar__tooltip">Toggle HTML markup</span>
               <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="100%" height="100%" viewBox="0 0 64 64">
                 <path class="kss-toolbar__icon-fill" d="M37.555,46.239l6.103,6.103l20.342,-20.342l-20.342,-20.342l-6.103,6.103l14.24,14.239l-14.24,14.239Z"/>
@@ -88,7 +88,7 @@
           </p>
 
           <div class="kss-description">
-            <p>Make a responsive table element without the <code>table</code> element.</p>
+            <p>DO NOT EDIT! Contains all of Frontend&#39;s pre-packaged alignment class styles.</p>
 
           </div>
 
@@ -101,7 +101,26 @@
 
 
           <div class="kss-modifier__example">
-            <div class="table">Table div vs. <code>table</code> element.</div>
+            <p class="align-left">.align-left</p>
+<p class="align-right">.align-right</p>
+<p class="align-center">.align-center</p>
+<p class="align-left-small">.align-left-small</p>
+<p class="align-right-small">.align-right-small</p>
+<p class="align-center-small">.align-center-small</p>
+<p class="align-left-medium">.align-left-medium</p>
+<p class="align-right-medium">.align-right-medium</p>
+<p class="align-center-medium">.align-center-medium</p>
+<p class="align-left-large">.align-left-large</p>
+<p class="align-right-large">.align-right-large</p>
+<p class="align-center-large">.align-center-large</p>
+<p class="float-left">.float-left</p>
+<p class="float-right">.float-right</p>
+<p class="float-left">.float-left-small</p>
+<p class="float-right">.float-right-small</p>
+<p class="float-left-medium">.float-left-medium</p>
+<p class="float-right-medium">.float-right-medium</p>
+<p class="float-left-large">.float-left-large</p>
+<p class="float-right-large">.float-right-large</p>
             <div class="kss-modifier__example-footer"></div>
           </div>
 
@@ -111,11 +130,30 @@
             <summary>
                 Markup
             </summary>
-            <pre class="prettyprint linenums lang-html"><code data-language="html">&lt;div class&#x3D;&quot;table&quot;&gt;Table div vs. &lt;code&gt;table&lt;/code&gt; element.&lt;/div&gt;</code></pre>
+            <pre class="prettyprint linenums lang-html"><code data-language="html">&lt;p class&#x3D;&quot;align-left&quot;&gt;.align-left&lt;/p&gt;
+&lt;p class&#x3D;&quot;align-right&quot;&gt;.align-right&lt;/p&gt;
+&lt;p class&#x3D;&quot;align-center&quot;&gt;.align-center&lt;/p&gt;
+&lt;p class&#x3D;&quot;align-left-small&quot;&gt;.align-left-small&lt;/p&gt;
+&lt;p class&#x3D;&quot;align-right-small&quot;&gt;.align-right-small&lt;/p&gt;
+&lt;p class&#x3D;&quot;align-center-small&quot;&gt;.align-center-small&lt;/p&gt;
+&lt;p class&#x3D;&quot;align-left-medium&quot;&gt;.align-left-medium&lt;/p&gt;
+&lt;p class&#x3D;&quot;align-right-medium&quot;&gt;.align-right-medium&lt;/p&gt;
+&lt;p class&#x3D;&quot;align-center-medium&quot;&gt;.align-center-medium&lt;/p&gt;
+&lt;p class&#x3D;&quot;align-left-large&quot;&gt;.align-left-large&lt;/p&gt;
+&lt;p class&#x3D;&quot;align-right-large&quot;&gt;.align-right-large&lt;/p&gt;
+&lt;p class&#x3D;&quot;align-center-large&quot;&gt;.align-center-large&lt;/p&gt;
+&lt;p class&#x3D;&quot;float-left&quot;&gt;.float-left&lt;/p&gt;
+&lt;p class&#x3D;&quot;float-right&quot;&gt;.float-right&lt;/p&gt;
+&lt;p class&#x3D;&quot;float-left&quot;&gt;.float-left-small&lt;/p&gt;
+&lt;p class&#x3D;&quot;float-right&quot;&gt;.float-right-small&lt;/p&gt;
+&lt;p class&#x3D;&quot;float-left-medium&quot;&gt;.float-left-medium&lt;/p&gt;
+&lt;p class&#x3D;&quot;float-right-medium&quot;&gt;.float-right-medium&lt;/p&gt;
+&lt;p class&#x3D;&quot;float-left-large&quot;&gt;.float-left-large&lt;/p&gt;
+&lt;p class&#x3D;&quot;float-right-large&quot;&gt;.float-right-large&lt;/p&gt;</code></pre>
           </details>
 
         <div class="kss-source kss-style">
-          Source: <code>frontend/components/classes/_common.scss</code>, line 7
+          Source: <code>frontend/components/classes/_alignment.scss</code>, line 1
         </div>
 
     </div>
