--- a/styleguide/item-frontend.html
+++ b/styleguide/item-frontend.html
@@ -49,38 +49,68 @@
                 </a>
               </li>
               <li class="kss-nav__menu-item">
-                <a class="kss-nav__menu-link" href="section-frontend.html#kssref-frontend-components-callout">
+                <a class="kss-nav__menu-link" href="section-frontend.html#kssref-frontend-components-alignment">
                   <span class="kss-nav__ref kss-nav__ref-child">2.2.1</span
+                  ><span class="kss-nav__name">Alignment Classes</span>
+                </a>
+              </li>
+              <li class="kss-nav__menu-item">
+                <a class="kss-nav__menu-link" href="section-frontend.html#kssref-frontend-components-buttons">
+                  <span class="kss-nav__ref kss-nav__ref-child">2.2.2</span
+                  ><span class="kss-nav__name">Button Classes</span>
+                </a>
+              </li>
+              <li class="kss-nav__menu-item">
+                <a class="kss-nav__menu-link" href="section-frontend.html#kssref-frontend-components-callout">
+                  <span class="kss-nav__ref kss-nav__ref-child">2.2.3</span
                   ><span class="kss-nav__name">Callout Classes</span>
                 </a>
               </li>
               <li class="kss-nav__menu-item">
                 <a class="kss-nav__menu-link" href="section-frontend.html#kssref-frontend-components-colors">
-                  <span class="kss-nav__ref kss-nav__ref-child">2.2.2</span
+                  <span class="kss-nav__ref kss-nav__ref-child">2.2.4</span
                   ><span class="kss-nav__name">Color Classes</span>
                 </a>
               </li>
               <li class="kss-nav__menu-item">
                 <a class="kss-nav__menu-link" href="section-frontend.html#kssref-frontend-components-common">
-                  <span class="kss-nav__ref kss-nav__ref-child">2.2.3</span
+                  <span class="kss-nav__ref kss-nav__ref-child">2.2.5</span
                   ><span class="kss-nav__name">Common Classes</span>
                 </a>
               </li>
               <li class="kss-nav__menu-item">
                 <a class="kss-nav__menu-link" href="section-frontend.html#kssref-frontend-components-drupal7">
-                  <span class="kss-nav__ref kss-nav__ref-child">2.2.4</span
+                  <span class="kss-nav__ref kss-nav__ref-child">2.2.6</span
                   ><span class="kss-nav__name">Drupal 7 Styles</span>
                 </a>
               </li>
               <li class="kss-nav__menu-item">
                 <a class="kss-nav__menu-link" href="section-frontend.html#kssref-frontend-components-layout">
-                  <span class="kss-nav__ref kss-nav__ref-child">2.2.5</span
+                  <span class="kss-nav__ref kss-nav__ref-child">2.2.7</span
                   ><span class="kss-nav__name">Layout Classes</span>
                 </a>
               </li>
               <li class="kss-nav__menu-item">
+                <a class="kss-nav__menu-link" href="section-frontend.html#kssref-frontend-components-lists">
+                  <span class="kss-nav__ref kss-nav__ref-child">2.2.8</span
+                  ><span class="kss-nav__name">List Classes</span>
+                </a>
+              </li>
+              <li class="kss-nav__menu-item">
+                <a class="kss-nav__menu-link" href="section-frontend.html#kssref-frontend-components-typography">
+                  <span class="kss-nav__ref kss-nav__ref-child">2.2.9</span
+                  ><span class="kss-nav__name">Typography Classes</span>
+                </a>
+              </li>
+              <li class="kss-nav__menu-item">
+                <a class="kss-nav__menu-link" href="section-frontend.html#kssref-frontend-components-visibility">
+                  <span class="kss-nav__ref kss-nav__ref-child">2.2.10</span
+                  ><span class="kss-nav__name">Visibility Classes</span>
+                </a>
+              </li>
+              <li class="kss-nav__menu-item">
                 <a class="kss-nav__menu-link" href="section-frontend.html#kssref-frontend-components-wordpress">
-                  <span class="kss-nav__ref kss-nav__ref-child">2.2.6</span
+                  <span class="kss-nav__ref kss-nav__ref-child">2.2.11</span
                   ><span class="kss-nav__name">WordPress Styles</span>
                 </a>
               </li>
