--- a/styleguide/item-frontend-components-buttons.html
+++ b/styleguide/item-frontend-components-buttons.html
@@ -41,23 +41,23 @@
 </div>
 <article role="main" class="kss-main">
 
-    <div id="kssref-frontend-components-common-table" class="kss-section kss-section--depth-4 is-fullscreen">
+    <div id="kssref-frontend-components-buttons" class="kss-section kss-section--depth-3 is-fullscreen">
 
       <div class="kss-style">
-        <h4 class="kss-title kss-title--level-4">
-          <a class="kss-title__permalink" href="#kssref-frontend-components-common-table">
+        <h3 class="kss-title kss-title--level-3">
+          <a class="kss-title__permalink" href="#kssref-frontend-components-buttons">
             <span class="kss-title__ref">
-              2.2.5.3
+              2.2.2
               <span class="kss-title__permalink-hash">
-                  #frontend.components.common.table
+                  #frontend.components.buttons
               </span>
             </span>
-            Responsive Table
+            Button Classes
           </a>
-        </h4>
+        </h3>
 
           <p class="kss-toolbar">
-            <a href="#kssref-frontend-components-common-table" data-kss-guides="true">
+            <a href="#kssref-frontend-components-buttons" data-kss-guides="true">
               <span class="kss-toolbar__tooltip">Toggle example guides</span>
               <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="100%" height="100%" viewBox="0 0 64 64">
                 <rect class="kss-toolbar__icon-fill" x="5" y="35" width="5" height="9"/>
@@ -78,7 +78,7 @@
                 <rect class="kss-toolbar__icon-fill" x="20" y="54" width="9" height="5"/>
               </svg>
             </a>
-            <a href="#kssref-frontend-components-common-table" data-kss-markup="true">
+            <a href="#kssref-frontend-components-buttons" data-kss-markup="true">
               <span class="kss-toolbar__tooltip">Toggle HTML markup</span>
               <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="100%" height="100%" viewBox="0 0 64 64">
                 <path class="kss-toolbar__icon-fill" d="M37.555,46.239l6.103,6.103l20.342,-20.342l-20.342,-20.342l-6.103,6.103l14.24,14.239l-14.24,14.239Z"/>
@@ -88,7 +88,7 @@
           </p>
 
           <div class="kss-description">
-            <p>Make a responsive table element without the <code>table</code> element.</p>
+            <p>DO NOT EDIT! Includes all Frontend button styles.</p>
 
           </div>
 
@@ -101,7 +101,14 @@
 
 
           <div class="kss-modifier__example">
-            <div class="table">Table div vs. <code>table</code> element.</div>
+            <p><a class="button" href="#">.button</a></p>
+<p><a class="button button--full" href="#">.button--full</a></p>
+<p><a class="button button--full-small" href="#">.button--full-small</a></p>
+<p><a class="button button--normal-small" href="#">.button--normal-small</a></p>
+<p><a class="button button--full-medium" href="#">.button--full-small</a></p>
+<p><a class="button button--normal-medium" href="#">.button--normal-small</a></p>
+<p><a class="button button--full-large" href="#">.button--full-large</a></p>
+<p><a class="button button--normal-large" href="#">.button--normal-large</a></p>
             <div class="kss-modifier__example-footer"></div>
           </div>
 
@@ -111,11 +118,18 @@
             <summary>
                 Markup
             </summary>
-            <pre class="prettyprint linenums lang-html"><code data-language="html">&lt;div class&#x3D;&quot;table&quot;&gt;Table div vs. &lt;code&gt;table&lt;/code&gt; element.&lt;/div&gt;</code></pre>
+            <pre class="prettyprint linenums lang-html"><code data-language="html">&lt;p&gt;&lt;a class&#x3D;&quot;button&quot; href&#x3D;&quot;#&quot;&gt;.button&lt;/a&gt;&lt;/p&gt;
+&lt;p&gt;&lt;a class&#x3D;&quot;button button--full&quot; href&#x3D;&quot;#&quot;&gt;.button--full&lt;/a&gt;&lt;/p&gt;
+&lt;p&gt;&lt;a class&#x3D;&quot;button button--full-small&quot; href&#x3D;&quot;#&quot;&gt;.button--full-small&lt;/a&gt;&lt;/p&gt;
+&lt;p&gt;&lt;a class&#x3D;&quot;button button--normal-small&quot; href&#x3D;&quot;#&quot;&gt;.button--normal-small&lt;/a&gt;&lt;/p&gt;
+&lt;p&gt;&lt;a class&#x3D;&quot;button button--full-medium&quot; href&#x3D;&quot;#&quot;&gt;.button--full-small&lt;/a&gt;&lt;/p&gt;
+&lt;p&gt;&lt;a class&#x3D;&quot;button button--normal-medium&quot; href&#x3D;&quot;#&quot;&gt;.button--normal-small&lt;/a&gt;&lt;/p&gt;
+&lt;p&gt;&lt;a class&#x3D;&quot;button button--full-large&quot; href&#x3D;&quot;#&quot;&gt;.button--full-large&lt;/a&gt;&lt;/p&gt;
+&lt;p&gt;&lt;a class&#x3D;&quot;button button--normal-large&quot; href&#x3D;&quot;#&quot;&gt;.button--normal-large&lt;/a&gt;&lt;/p&gt;</code></pre>
           </details>
 
         <div class="kss-source kss-style">
-          Source: <code>frontend/components/classes/_common.scss</code>, line 7
+          Source: <code>frontend/components/classes/_buttons.scss</code>, line 1
         </div>
 
     </div>
