--- a/styleguide/item-frontend-components-lists.html
+++ b/styleguide/item-frontend-components-lists.html
@@ -41,23 +41,23 @@
 </div>
 <article role="main" class="kss-main">
 
-    <div id="kssref-frontend-components-common-table" class="kss-section kss-section--depth-4 is-fullscreen">
+    <div id="kssref-frontend-components-lists" class="kss-section kss-section--depth-3 is-fullscreen">
 
       <div class="kss-style">
-        <h4 class="kss-title kss-title--level-4">
-          <a class="kss-title__permalink" href="#kssref-frontend-components-common-table">
+        <h3 class="kss-title kss-title--level-3">
+          <a class="kss-title__permalink" href="#kssref-frontend-components-lists">
             <span class="kss-title__ref">
-              2.2.5.3
+              2.2.8
               <span class="kss-title__permalink-hash">
-                  #frontend.components.common.table
+                  #frontend.components.lists
               </span>
             </span>
-            Responsive Table
+            List Classes
           </a>
-        </h4>
+        </h3>
 
           <p class="kss-toolbar">
-            <a href="#kssref-frontend-components-common-table" data-kss-guides="true">
+            <a href="#kssref-frontend-components-lists" data-kss-guides="true">
               <span class="kss-toolbar__tooltip">Toggle example guides</span>
               <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="100%" height="100%" viewBox="0 0 64 64">
                 <rect class="kss-toolbar__icon-fill" x="5" y="35" width="5" height="9"/>
@@ -78,7 +78,7 @@
                 <rect class="kss-toolbar__icon-fill" x="20" y="54" width="9" height="5"/>
               </svg>
             </a>
-            <a href="#kssref-frontend-components-common-table" data-kss-markup="true">
+            <a href="#kssref-frontend-components-lists" data-kss-markup="true">
               <span class="kss-toolbar__tooltip">Toggle HTML markup</span>
               <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="100%" height="100%" viewBox="0 0 64 64">
                 <path class="kss-toolbar__icon-fill" d="M37.555,46.239l6.103,6.103l20.342,-20.342l-20.342,-20.342l-6.103,6.103l14.24,14.239l-14.24,14.239Z"/>
@@ -88,7 +88,7 @@
           </p>
 
           <div class="kss-description">
-            <p>Make a responsive table element without the <code>table</code> element.</p>
+            <p>DO NOT EDIT! Includes all Frontend list styles.</p>
 
           </div>
 
@@ -101,7 +101,66 @@
 
 
           <div class="kss-modifier__example">
-            <div class="table">Table div vs. <code>table</code> element.</div>
+            <ul class="list-block">
+  <li>.list-block</li>
+  <li>.list-block</li>
+  <li>.list-block</li>
+</ul>
+<ul class="list-block-small">
+  <li>.list-block-small</li>
+  <li>.list-block-small</li>
+  <li>.list-block-small</li>
+</ul>
+<ul class="list-block-medium">
+  <li>.list-block-medium</li>
+  <li>.list-block-medium</li>
+  <li>.list-block-medium</li>
+</ul>
+<ul class="list-block-large">
+  <li>.list-block-large</li>
+  <li>.list-block-large</li>
+  <li>.list-block-large</li>
+</ul>
+<ul class="list-inline-block">
+  <li>.list-inline-block</li>
+  <li>.list-inline-block</li>
+  <li>.list-inline-block</li>
+</ul>
+<ul class="list-inline-block-small">
+  <li>.list-inline-block-small</li>
+  <li>.list-inline-block-small</li>
+  <li>.list-inline-block-small</li>
+</ul>
+<ul class="list-inline-block-medium">
+  <li>.list-inline-block-medium</li>
+  <li>.list-inline-block-medium</li>
+  <li>.list-inline-block-medium</li>
+</ul>
+<ul class="list-inline-block-large">
+  <li>.list-inline-block-large</li>
+  <li>.list-inline-block-large</li>
+  <li>.list-inline-block-large</li>
+</ul>
+<ul class="list-inline">
+  <li>.list-inline</li>
+  <li>.list-inline</li>
+  <li>.list-inline</li>
+</ul>
+<ul class="list-inline-small">
+  <li>.list-inline-small</li>
+  <li>.list-inline-small</li>
+  <li>.list-inline-small</li>
+</ul>
+<ul class="list-inline-medium">
+  <li>.list-inline-medium</li>
+  <li>.list-inline-medium</li>
+  <li>.list-inline-medium</li>
+</ul>
+<ul class="list-inline-large">
+  <li>.list-inline-large</li>
+  <li>.list-inline-large</li>
+  <li>.list-inline-large</li>
+</ul>
             <div class="kss-modifier__example-footer"></div>
           </div>
 
@@ -111,11 +170,70 @@
             <summary>
                 Markup
             </summary>
-            <pre class="prettyprint linenums lang-html"><code data-language="html">&lt;div class&#x3D;&quot;table&quot;&gt;Table div vs. &lt;code&gt;table&lt;/code&gt; element.&lt;/div&gt;</code></pre>
+            <pre class="prettyprint linenums lang-html"><code data-language="html">&lt;ul class&#x3D;&quot;list-block&quot;&gt;
+  &lt;li&gt;.list-block&lt;/li&gt;
+  &lt;li&gt;.list-block&lt;/li&gt;
+  &lt;li&gt;.list-block&lt;/li&gt;
+&lt;/ul&gt;
+&lt;ul class&#x3D;&quot;list-block-small&quot;&gt;
+  &lt;li&gt;.list-block-small&lt;/li&gt;
+  &lt;li&gt;.list-block-small&lt;/li&gt;
+  &lt;li&gt;.list-block-small&lt;/li&gt;
+&lt;/ul&gt;
+&lt;ul class&#x3D;&quot;list-block-medium&quot;&gt;
+  &lt;li&gt;.list-block-medium&lt;/li&gt;
+  &lt;li&gt;.list-block-medium&lt;/li&gt;
+  &lt;li&gt;.list-block-medium&lt;/li&gt;
+&lt;/ul&gt;
+&lt;ul class&#x3D;&quot;list-block-large&quot;&gt;
+  &lt;li&gt;.list-block-large&lt;/li&gt;
+  &lt;li&gt;.list-block-large&lt;/li&gt;
+  &lt;li&gt;.list-block-large&lt;/li&gt;
+&lt;/ul&gt;
+&lt;ul class&#x3D;&quot;list-inline-block&quot;&gt;
+  &lt;li&gt;.list-inline-block&lt;/li&gt;
+  &lt;li&gt;.list-inline-block&lt;/li&gt;
+  &lt;li&gt;.list-inline-block&lt;/li&gt;
+&lt;/ul&gt;
+&lt;ul class&#x3D;&quot;list-inline-block-small&quot;&gt;
+  &lt;li&gt;.list-inline-block-small&lt;/li&gt;
+  &lt;li&gt;.list-inline-block-small&lt;/li&gt;
+  &lt;li&gt;.list-inline-block-small&lt;/li&gt;
+&lt;/ul&gt;
+&lt;ul class&#x3D;&quot;list-inline-block-medium&quot;&gt;
+  &lt;li&gt;.list-inline-block-medium&lt;/li&gt;
+  &lt;li&gt;.list-inline-block-medium&lt;/li&gt;
+  &lt;li&gt;.list-inline-block-medium&lt;/li&gt;
+&lt;/ul&gt;
+&lt;ul class&#x3D;&quot;list-inline-block-large&quot;&gt;
+  &lt;li&gt;.list-inline-block-large&lt;/li&gt;
+  &lt;li&gt;.list-inline-block-large&lt;/li&gt;
+  &lt;li&gt;.list-inline-block-large&lt;/li&gt;
+&lt;/ul&gt;
+&lt;ul class&#x3D;&quot;list-inline&quot;&gt;
+  &lt;li&gt;.list-inline&lt;/li&gt;
+  &lt;li&gt;.list-inline&lt;/li&gt;
+  &lt;li&gt;.list-inline&lt;/li&gt;
+&lt;/ul&gt;
+&lt;ul class&#x3D;&quot;list-inline-small&quot;&gt;
+  &lt;li&gt;.list-inline-small&lt;/li&gt;
+  &lt;li&gt;.list-inline-small&lt;/li&gt;
+  &lt;li&gt;.list-inline-small&lt;/li&gt;
+&lt;/ul&gt;
+&lt;ul class&#x3D;&quot;list-inline-medium&quot;&gt;
+  &lt;li&gt;.list-inline-medium&lt;/li&gt;
+  &lt;li&gt;.list-inline-medium&lt;/li&gt;
+  &lt;li&gt;.list-inline-medium&lt;/li&gt;
+&lt;/ul&gt;
+&lt;ul class&#x3D;&quot;list-inline-large&quot;&gt;
+  &lt;li&gt;.list-inline-large&lt;/li&gt;
+  &lt;li&gt;.list-inline-large&lt;/li&gt;
+  &lt;li&gt;.list-inline-large&lt;/li&gt;
+&lt;/ul&gt;</code></pre>
           </details>
 
         <div class="kss-source kss-style">
-          Source: <code>frontend/components/classes/_common.scss</code>, line 7
+          Source: <code>frontend/components/classes/_lists.scss</code>, line 1
         </div>
 
     </div>
