--- a/styleguide/item-frontend-components-typography.html
+++ b/styleguide/item-frontend-components-typography.html
@@ -41,23 +41,23 @@
 </div>
 <article role="main" class="kss-main">
 
-    <div id="kssref-frontend-components-common-table" class="kss-section kss-section--depth-4 is-fullscreen">
+    <div id="kssref-frontend-components-typography" class="kss-section kss-section--depth-3 is-fullscreen">
 
       <div class="kss-style">
-        <h4 class="kss-title kss-title--level-4">
-          <a class="kss-title__permalink" href="#kssref-frontend-components-common-table">
+        <h3 class="kss-title kss-title--level-3">
+          <a class="kss-title__permalink" href="#kssref-frontend-components-typography">
             <span class="kss-title__ref">
-              2.2.5.3
+              2.2.9
               <span class="kss-title__permalink-hash">
-                  #frontend.components.common.table
+                  #frontend.components.typography
               </span>
             </span>
-            Responsive Table
+            Typography Classes
           </a>
-        </h4>
+        </h3>
 
           <p class="kss-toolbar">
-            <a href="#kssref-frontend-components-common-table" data-kss-guides="true">
+            <a href="#kssref-frontend-components-typography" data-kss-guides="true">
               <span class="kss-toolbar__tooltip">Toggle example guides</span>
               <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="100%" height="100%" viewBox="0 0 64 64">
                 <rect class="kss-toolbar__icon-fill" x="5" y="35" width="5" height="9"/>
@@ -78,7 +78,7 @@
                 <rect class="kss-toolbar__icon-fill" x="20" y="54" width="9" height="5"/>
               </svg>
             </a>
-            <a href="#kssref-frontend-components-common-table" data-kss-markup="true">
+            <a href="#kssref-frontend-components-typography" data-kss-markup="true">
               <span class="kss-toolbar__tooltip">Toggle HTML markup</span>
               <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="100%" height="100%" viewBox="0 0 64 64">
                 <path class="kss-toolbar__icon-fill" d="M37.555,46.239l6.103,6.103l20.342,-20.342l-20.342,-20.342l-6.103,6.103l14.24,14.239l-14.24,14.239Z"/>
@@ -88,7 +88,7 @@
           </p>
 
           <div class="kss-description">
-            <p>Make a responsive table element without the <code>table</code> element.</p>
+            <p>DO NOT EDIT! Contains all of Frontend&#39;s pre-packaged typography class styles.</p>
 
           </div>
 
@@ -101,7 +101,22 @@
 
 
           <div class="kss-modifier__example">
-            <div class="table">Table div vs. <code>table</code> element.</div>
+            <p class="strikethrough">.strikethrough</p>
+<p class="underline">.underline</p>
+<p class="font-weight-normal">.font-weight-normal</p>
+<p class="font-weight-medium">.font-weight-medium</p>
+<p class="font-weight-semibold">.font-weight-semibold</p>
+<p class="font-weight-bold">.font-weight-bold</p>
+<p class="font-size-xxxlarge">.font-size-xxxlarge</p>
+<p class="font-size-xxlarge">.font-size-xxlarge</p>
+<p class="font-size-xlarge">.font-size-xlarge</p>
+<p class="font-size-large">.font-size-large</p>
+<p class="font-size-medium">.font-size-medium</p>
+<p class="font-size-normal">.font-size-normal</p>
+<p class="font-size-small">.font-size-small</p>
+<p class="font-size-xsmall">.font-size-xsmall</p>
+<p class="font-size-xxsmall">.font-size-xxsmall</p>
+<p class="font-size-xxxsmall">.font-size-xxxsmall</p>
             <div class="kss-modifier__example-footer"></div>
           </div>
 
@@ -111,11 +126,26 @@
             <summary>
                 Markup
             </summary>
-            <pre class="prettyprint linenums lang-html"><code data-language="html">&lt;div class&#x3D;&quot;table&quot;&gt;Table div vs. &lt;code&gt;table&lt;/code&gt; element.&lt;/div&gt;</code></pre>
+            <pre class="prettyprint linenums lang-html"><code data-language="html">&lt;p class&#x3D;&quot;strikethrough&quot;&gt;.strikethrough&lt;/p&gt;
+&lt;p class&#x3D;&quot;underline&quot;&gt;.underline&lt;/p&gt;
+&lt;p class&#x3D;&quot;font-weight-normal&quot;&gt;.font-weight-normal&lt;/p&gt;
+&lt;p class&#x3D;&quot;font-weight-medium&quot;&gt;.font-weight-medium&lt;/p&gt;
+&lt;p class&#x3D;&quot;font-weight-semibold&quot;&gt;.font-weight-semibold&lt;/p&gt;
+&lt;p class&#x3D;&quot;font-weight-bold&quot;&gt;.font-weight-bold&lt;/p&gt;
+&lt;p class&#x3D;&quot;font-size-xxxlarge&quot;&gt;.font-size-xxxlarge&lt;/p&gt;
+&lt;p class&#x3D;&quot;font-size-xxlarge&quot;&gt;.font-size-xxlarge&lt;/p&gt;
+&lt;p class&#x3D;&quot;font-size-xlarge&quot;&gt;.font-size-xlarge&lt;/p&gt;
+&lt;p class&#x3D;&quot;font-size-large&quot;&gt;.font-size-large&lt;/p&gt;
+&lt;p class&#x3D;&quot;font-size-medium&quot;&gt;.font-size-medium&lt;/p&gt;
+&lt;p class&#x3D;&quot;font-size-normal&quot;&gt;.font-size-normal&lt;/p&gt;
+&lt;p class&#x3D;&quot;font-size-small&quot;&gt;.font-size-small&lt;/p&gt;
+&lt;p class&#x3D;&quot;font-size-xsmall&quot;&gt;.font-size-xsmall&lt;/p&gt;
+&lt;p class&#x3D;&quot;font-size-xxsmall&quot;&gt;.font-size-xxsmall&lt;/p&gt;
+&lt;p class&#x3D;&quot;font-size-xxxsmall&quot;&gt;.font-size-xxxsmall&lt;/p&gt;</code></pre>
           </details>
 
         <div class="kss-source kss-style">
-          Source: <code>frontend/components/classes/_common.scss</code>, line 7
+          Source: <code>frontend/components/classes/_typography.scss</code>, line 1
         </div>
 
     </div>
