--- a/src/index.html
+++ b/src/index.html
@@ -19,7 +19,7 @@
 
 <link rel="stylesheet" href="css/style.css" media="all">
 </head>
-<body style="padding-top: 80px;">
+<body style="padding-top: 50px;">
 <div class="row" style="max-width: 660px; padding-left: 30px; padding-right: 30px;">
   <div class="col-12-1">
     <p class="bg-color-primary round inline-block align-center font-size-xxxlarge color-white" style="padding: 14px 0 14px 9px; width: 100px; height: 100px;"><b>F<sup>b</sup></b></p>
@@ -29,6 +29,8 @@
     <pre>$ bundle install
 $ npm install
 $ npm start</pre>
+    <p>Ready for production?</p>
+    <pre>$ NODE_ENV=production gulp</pre>
     <ul class="list-inline-block">
       <li style="margin-right: 40px;"><a href="/styleguide">Documentation</a>.
       <li style="margin-right: 40px;"><a href="https://github.com/bmarshall511/frontend/archive/latest.zip" target="_blank">Download</a>.
