--- a/src/index.html
+++ b/src/index.html
@@ -24,7 +24,7 @@
   <div class="col-12-1">
     <p class="bg-color-primary round inline-block align-center font-size-xxxlarge color-white" style="padding: 14px 0 14px 9px; width: 100px; height: 100px;"><b>F<sup>b</sup></b></p>
     <h1>Frontend <sup>Build</sup></h1>
-    <p>Frontend Build is a light-weight, no-bloat front-end build framework. It's purpose is to give developers a jumpstart utilizing Node to automate repetitive tasks, a variables file to quickly configure base elements and a standards-driven approach to help prevent spaghetti code making new developer ramp-up time much shorter.</p>
+    <p class="align-justify-small">Frontend Build is a light-weight, no-bloat front-end build framework. It's purpose is to give developers a jumpstart utilizing Node to automate repetitive tasks, a variables file to quickly configure base elements and a standards-driven approach to help prevent spaghetti code making new developer ramp-up time much shorter.</p>
     <p>Jump start your development process in three simple steps:</p>
     <pre>$ bundle install
 $ npm install
