--- a/styleguide/item-frontend-components-alignment.html
+++ b/styleguide/item-frontend-components-alignment.html
@@ -104,15 +104,19 @@
             <p class="align-left">.align-left</p>
 <p class="align-right">.align-right</p>
 <p class="align-center">.align-center</p>
+<p class="align-justify">.align-justify</p>
 <p class="align-left-small">.align-left-small</p>
 <p class="align-right-small">.align-right-small</p>
 <p class="align-center-small">.align-center-small</p>
+<p class="align-justify-small">.align-justify-small</p>
 <p class="align-left-medium">.align-left-medium</p>
 <p class="align-right-medium">.align-right-medium</p>
 <p class="align-center-medium">.align-center-medium</p>
+<p class="align-justify-medium">.align-justify-medium</p>
 <p class="align-left-large">.align-left-large</p>
 <p class="align-right-large">.align-right-large</p>
 <p class="align-center-large">.align-center-large</p>
+<p class="align-justify-large">.align-justify-large</p>
 <p class="float-left">.float-left</p>
 <p class="float-right">.float-right</p>
 <p class="float-left">.float-left-small</p>
@@ -133,15 +137,19 @@
             <pre class="prettyprint linenums lang-html"><code data-language="html">&lt;p class&#x3D;&quot;align-left&quot;&gt;.align-left&lt;/p&gt;
 &lt;p class&#x3D;&quot;align-right&quot;&gt;.align-right&lt;/p&gt;
 &lt;p class&#x3D;&quot;align-center&quot;&gt;.align-center&lt;/p&gt;
+&lt;p class&#x3D;&quot;align-justify&quot;&gt;.align-justify&lt;/p&gt;
 &lt;p class&#x3D;&quot;align-left-small&quot;&gt;.align-left-small&lt;/p&gt;
 &lt;p class&#x3D;&quot;align-right-small&quot;&gt;.align-right-small&lt;/p&gt;
 &lt;p class&#x3D;&quot;align-center-small&quot;&gt;.align-center-small&lt;/p&gt;
+&lt;p class&#x3D;&quot;align-justify-small&quot;&gt;.align-justify-small&lt;/p&gt;
 &lt;p class&#x3D;&quot;align-left-medium&quot;&gt;.align-left-medium&lt;/p&gt;
 &lt;p class&#x3D;&quot;align-right-medium&quot;&gt;.align-right-medium&lt;/p&gt;
 &lt;p class&#x3D;&quot;align-center-medium&quot;&gt;.align-center-medium&lt;/p&gt;
+&lt;p class&#x3D;&quot;align-justify-medium&quot;&gt;.align-justify-medium&lt;/p&gt;
 &lt;p class&#x3D;&quot;align-left-large&quot;&gt;.align-left-large&lt;/p&gt;
 &lt;p class&#x3D;&quot;align-right-large&quot;&gt;.align-right-large&lt;/p&gt;
 &lt;p class&#x3D;&quot;align-center-large&quot;&gt;.align-center-large&lt;/p&gt;
+&lt;p class&#x3D;&quot;align-justify-large&quot;&gt;.align-justify-large&lt;/p&gt;
 &lt;p class&#x3D;&quot;float-left&quot;&gt;.float-left&lt;/p&gt;
 &lt;p class&#x3D;&quot;float-right&quot;&gt;.float-right&lt;/p&gt;
 &lt;p class&#x3D;&quot;float-left&quot;&gt;.float-left-small&lt;/p&gt;
