--- a/src/index.html
+++ b/src/index.html
@@ -30,7 +30,7 @@
 $ npm install
 $ npm start</pre>
     <p>Ready for production?</p>
-    <pre>$ NODE_ENV=production gulp</pre>
+    <pre>$ gulp --prod</pre>
     <ul class="list-inline-block">
       <li style="margin-right: 40px;"><a href="/styleguide">Documentation</a>.
       <li style="margin-right: 40px;"><a href="https://github.com/bmarshall511/frontend/archive/latest.zip" target="_blank">Download</a>.
