--- a/styleguide/index.html
+++ b/styleguide/index.html
@@ -92,9 +92,9 @@
 <h3 id="changelog">Changelog</h3>
 <h4 id="v4-0-0-tbd-">v4.0.0 (TBD)</h4>
 <ul>
-<li>A complete rewrite of the NPM package and gulp using Babel and ES2015.</li>
-<li>Now supports React, ES2015 and Babel apps.</li>
-<li>Integrates with <a href="https://github.com/kss-node/kss-node">kss</a> to automate the creation of stylesheets.</li>
+<li>A complete rewrite of the NPM package and gulp using Babel and ES2015</li>
+<li>Now supports React, ES2015 and Babel</li>
+<li>Integrates with <a href="https://github.com/kss-node/kss-node">kss</a> to automate the creation of stylesheets</li>
 <li>Improved documentation</li>
 </ul>
 <h4 id="v3-0-3-dev-">v3.0.3 (dev)</h4>
