--- a/styleguide/index.html
+++ b/styleguide/index.html
@@ -76,7 +76,7 @@
 <li><code>$ gulp js-transpile</code> Transpiles JS files</li>
 <li><code>$ gulp scripts</code> Lints and compiles JS files</li>
 <li><code>$ gulp compass</code> Compiles Sass files</li>
-<li><code>$ gulp delete</code> Deletes everything in the dist directory</li>
+<li><code>$ gulp delete</code> Deletes everything in the dist &amp; styleguide directory</li>
 <li><code>$ gulp copy-fonts</code> Copies fonts to the dist directory</li>
 <li><code>$ gulp images</code> Minifies images</li>
 <li><code>$ gulp kss</code> Generates a styleguide</li>
