--- a/styleguide/index.html
+++ b/styleguide/index.html
@@ -71,7 +71,7 @@
 <h3 id="development-usage">Development Usage</h3>
 <p>The following commands can be run in the frontend directory during development:</p>
 <ul>
-<li><code>$ gulp</code> Runs the tasks defined in the <code>defaultTasks</code> config variable</li>
+<li><code>$ gulp</code> Runs the default tasks</li>
 <li><code>$ gulp js-lint</code> Lints JS files</li>
 <li><code>$ gulp js-transpile</code> Transpiles JS files</li>
 <li><code>$ gulp scripts</code> Lints and compiles JS files</li>
