--- a/styleguide/index.html
+++ b/styleguide/index.html
@@ -94,10 +94,15 @@
 <li>And awesome <a href="https://github.com/bmarshall511/frontend/graphs/contributors">contributors</a></li>
 </ul>
 <h3 id="changelog">Changelog</h3>
+<h4 id="v4-0-1-tbd-">v4.0.1 (TBD)</h4>
+<ul>
+<li>Fixed npm publish error</li>
+<li>README typo fix</li>
+</ul>
 <h4 id="v4-0-0-june-21-2017-">v4.0.0 (June 21, 2017)</h4>
 <ul>
 <li>A complete rewrite of the NPM package and gulp using Babel and ES2015</li>
-<li>Now supports React, ES2015 and Babel</li>
+<li>Now supports React, ES2016 and Babel</li>
 <li>Integrates with <a href="https://github.com/kss-node/kss-node">kss</a> to automate the creation of stylesheets</li>
 <li>Improved documentation</li>
 </ul>
