Fixed max-width calculation issue with 100% wide sites

--- a/styleguide/index.html
+++ b/styleguide/index.html
@@ -98,6 +98,7 @@
 <ul>
 <li>Fixed npm publish error</li>
 <li>README typo fix</li>
+<li>Removed toolkit</li>
 </ul>
 <h4 id="v4-0-0-june-21-2017-">v4.0.0 (June 21, 2017)</h4>
 <ul>
