Removed the plumber and notify node packages

--- a/styleguide/index.html
+++ b/styleguide/index.html
@@ -99,13 +99,19 @@
 <li>Fixed npm publish error</li>
 <li>README typo fix</li>
 <li>Removed toolkit</li>
+<li>Fixed js-transpile task error from stopping the build</li>
+<li>Installed babel-preset-react to support React applications by default</li>
+<li>Installed css-loader and style-loader to import CSS from JS (<a href="https://webpack.js.org/guides/code-splitting-css/">https://webpack.js.org/guides/code-splitting-css/</a>)</li>
+<li>Fixed Compass compile issue during watch when an error is found</li>
+<li>Fixed elint error bug</li>
+<li>Removed plumber from the js-transpile task, handled by webpack</li>
+<li>Removed the plumber and notify node packages</li>
 </ul>
 <h4 id="v4-0-0-june-21-2017-">v4.0.0 (June 21, 2017)</h4>
 <ul>
 <li>A complete rewrite of the NPM package and gulp using Babel and ES2015</li>
 <li>Now supports React, ES2016 and Babel</li>
 <li>Integrates with <a href="https://github.com/kss-node/kss-node">kss</a> to automate the creation of stylesheets</li>
-<li>Improved documentation</li>
 </ul>
 <h4 id="v3-0-3-dev-">v3.0.3 (dev)</h4>
 <ul>
