Added additional vars, scss-lint config, fixed gulp image path and styleguide typo.

--- a/styleguide/index.html
+++ b/styleguide/index.html
@@ -104,8 +104,11 @@
 <li>Installed css-loader and style-loader to import CSS from JS (<a href="https://webpack.js.org/guides/code-splitting-css/">https://webpack.js.org/guides/code-splitting-css/</a>)</li>
 <li>Fixed Compass compile issue during watch when an error is found</li>
 <li>Fixed elint error bug</li>
-<li>Removed plumber from the js-transpile task, handled by webpack</li>
-<li>Removed the plumber and notify node packages</li>
+<li>Updated plumber error handling</li>
+<li>Added a scss-lint config file</li>
+<li>Fixed gulp image path</li>
+<li>Fixed styleguide typo</li>
+<li>Added the <code>$button-letter-spacing</code>, <code>$anchor-color-visited</code> and <code>$anchor-text-decoration-visited-hover</code> variables</li>
 </ul>
 <h4 id="v4-0-0-june-21-2017-">v4.0.0 (June 21, 2017)</h4>
 <ul>
