--- a/styleguide/item-application-base.html
+++ b/styleguide/item-application-base.html
@@ -41,24 +41,24 @@
 </div>
 <article role="main" class="kss-main">
 
-    <div id="kssref-application-layout" class="kss-section kss-section--depth-2 is-fullscreen">
+    <div id="kssref-application-base" class="kss-section kss-section--depth-2 is-fullscreen">
 
       <div class="kss-style">
         <h2 class="kss-title kss-title--level-2">
-          <a class="kss-title__permalink" href="#kssref-application-layout">
+          <a class="kss-title__permalink" href="#kssref-application-base">
             <span class="kss-title__ref">
-              1.4
+              1.1
               <span class="kss-title__permalink-hash">
-                  #application.layout
+                  #application.base
               </span>
             </span>
-            Application Layout
+            Application Base
           </a>
         </h2>
 
 
           <div class="kss-description">
-            <p>Application layout selector declarations.</p>
+            <p>Application selector declarations.</p>
 
           </div>
 
@@ -66,7 +66,7 @@
 
 
         <div class="kss-source kss-style">
-          Source: <code>style.scss</code>, line 70
+          Source: <code>style.scss</code>, line 62
         </div>
 
     </div>
