--- a/styleguide/item-application.html
+++ b/styleguide/item-application.html
@@ -32,38 +32,38 @@
         </a>
             <ul class="kss-nav__menu-child">
               <li class="kss-nav__menu-item">
-                <a class="kss-nav__menu-link" href="section-application.html#kssref-application-components">
+                <a class="kss-nav__menu-link" href="section-application.html#kssref-application-base">
                   <span class="kss-nav__ref ">1.1</span
+                  ><span class="kss-nav__name">Application Base</span>
+                </a>
+              </li>
+              <li class="kss-nav__menu-item">
+                <a class="kss-nav__menu-link" href="section-application.html#kssref-application-components">
+                  <span class="kss-nav__ref ">1.2</span
                   ><span class="kss-nav__name">Application Components</span>
                 </a>
               </li>
               <li class="kss-nav__menu-item">
                 <a class="kss-nav__menu-link" href="section-application.html#kssref-application-global">
-                  <span class="kss-nav__ref ">1.2</span
-                  ><span class="kss-nav__name">Application Base</span>
-                </a>
-              </li>
-              <li class="kss-nav__menu-item">
-                <a class="kss-nav__menu-link" href="section-application.html#kssref-application-global">
-                  <span class="kss-nav__ref ">1.2</span
+                  <span class="kss-nav__ref ">1.3</span
                   ><span class="kss-nav__name">Application Global</span>
                 </a>
               </li>
               <li class="kss-nav__menu-item">
                 <a class="kss-nav__menu-link" href="section-application.html#kssref-application-global-custom-variables">
-                  <span class="kss-nav__ref kss-nav__ref-child">1.2.1</span
+                  <span class="kss-nav__ref kss-nav__ref-child">1.3.1</span
                   ><span class="kss-nav__name">Application Custom Variables</span>
                 </a>
               </li>
               <li class="kss-nav__menu-item">
                 <a class="kss-nav__menu-link" href="section-application.html#kssref-application-global-variables">
-                  <span class="kss-nav__ref kss-nav__ref-child">1.2.2</span
+                  <span class="kss-nav__ref kss-nav__ref-child">1.3.2</span
                   ><span class="kss-nav__name">Application Variables</span>
                 </a>
               </li>
               <li class="kss-nav__menu-item">
                 <a class="kss-nav__menu-link" href="section-application.html#kssref-application-layout">
-                  <span class="kss-nav__ref ">1.3</span
+                  <span class="kss-nav__ref ">1.4</span
                   ><span class="kss-nav__name">Application Layout</span>
                 </a>
               </li>
