--- a/styleguide/section-application.html
+++ b/styleguide/section-application.html
@@ -32,38 +32,38 @@
         </a>
             <ul class="kss-nav__menu-child">
               <li class="kss-nav__menu-item">
-                <a class="kss-nav__menu-link" href="section-application.html#kssref-application-components">
+                <a class="kss-nav__menu-link" href="section-application.html#kssref-application-base">
                   <span class="kss-nav__ref ">1.1</span
+                  ><span class="kss-nav__name">Application Base</span>
+                </a>
+              </li>
+              <li class="kss-nav__menu-item">
+                <a class="kss-nav__menu-link" href="section-application.html#kssref-application-components">
+                  <span class="kss-nav__ref ">1.2</span
                   ><span class="kss-nav__name">Application Components</span>
                 </a>
               </li>
               <li class="kss-nav__menu-item">
                 <a class="kss-nav__menu-link" href="section-application.html#kssref-application-global">
-                  <span class="kss-nav__ref ">1.2</span
-                  ><span class="kss-nav__name">Application Base</span>
-                </a>
-              </li>
-              <li class="kss-nav__menu-item">
-                <a class="kss-nav__menu-link" href="section-application.html#kssref-application-global">
-                  <span class="kss-nav__ref ">1.2</span
+                  <span class="kss-nav__ref ">1.3</span
                   ><span class="kss-nav__name">Application Global</span>
                 </a>
               </li>
               <li class="kss-nav__menu-item">
                 <a class="kss-nav__menu-link" href="section-application.html#kssref-application-global-custom-variables">
-                  <span class="kss-nav__ref kss-nav__ref-child">1.2.1</span
+                  <span class="kss-nav__ref kss-nav__ref-child">1.3.1</span
                   ><span class="kss-nav__name">Application Custom Variables</span>
                 </a>
               </li>
               <li class="kss-nav__menu-item">
                 <a class="kss-nav__menu-link" href="section-application.html#kssref-application-global-variables">
-                  <span class="kss-nav__ref kss-nav__ref-child">1.2.2</span
+                  <span class="kss-nav__ref kss-nav__ref-child">1.3.2</span
                   ><span class="kss-nav__name">Application Variables</span>
                 </a>
               </li>
               <li class="kss-nav__menu-item">
                 <a class="kss-nav__menu-link" href="section-application.html#kssref-application-layout">
-                  <span class="kss-nav__ref ">1.3</span
+                  <span class="kss-nav__ref ">1.4</span
                   ><span class="kss-nav__name">Application Layout</span>
                 </a>
               </li>
@@ -109,13 +109,42 @@ styles.</p>
         </div>
 
     </div>
+    <section id="kssref-application-base" class="kss-section kss-section--depth-2 ">
+
+      <div class="kss-style">
+        <h2 class="kss-title kss-title--level-2">
+          <a class="kss-title__permalink" href="#kssref-application-base">
+            <span class="kss-title__ref">
+              1.1
+              <span class="kss-title__permalink-hash">
+                  #application.base
+              </span>
+            </span>
+            Application Base
+          </a>
+        </h2>
+
+
+          <div class="kss-description">
+            <p>Application selector declarations.</p>
+
+          </div>
+
+      </div>
+
+
+        <div class="kss-source kss-style">
+          Source: <code>style.scss</code>, line 62
+        </div>
+
+    </section>
     <section id="kssref-application-components" class="kss-section kss-section--depth-2 ">
 
       <div class="kss-style">
         <h2 class="kss-title kss-title--level-2">
           <a class="kss-title__permalink" href="#kssref-application-components">
             <span class="kss-title__ref">
-              1.1
+              1.2
               <span class="kss-title__permalink-hash">
                   #application.components
               </span>
@@ -144,36 +173,7 @@ styles.</p>
         <h2 class="kss-title kss-title--level-2">
           <a class="kss-title__permalink" href="#kssref-application-global">
             <span class="kss-title__ref">
-              1.2
-              <span class="kss-title__permalink-hash">
-                  #application.global
-              </span>
-            </span>
-            Application Base
-          </a>
-        </h2>
-
-
-          <div class="kss-description">
-            <p>Application selector declarations.</p>
-
-          </div>
-
-      </div>
-
-
-        <div class="kss-source kss-style">
-          Source: <code>style.scss</code>, line 62
-        </div>
-
-    </section>
-    <section id="kssref-application-global" class="kss-section kss-section--depth-2 ">
-
-      <div class="kss-style">
-        <h2 class="kss-title kss-title--level-2">
-          <a class="kss-title__permalink" href="#kssref-application-global">
-            <span class="kss-title__ref">
-              1.2
+              1.3
               <span class="kss-title__permalink-hash">
                   #application.global
               </span>
@@ -202,7 +202,7 @@ styles.</p>
         <h3 class="kss-title kss-title--level-3">
           <a class="kss-title__permalink" href="#kssref-application-global-custom-variables">
             <span class="kss-title__ref">
-              1.2.1
+              1.3.1
               <span class="kss-title__permalink-hash">
                   #application.global.custom-variables
               </span>
@@ -231,7 +231,7 @@ styles.</p>
         <h3 class="kss-title kss-title--level-3">
           <a class="kss-title__permalink" href="#kssref-application-global-variables">
             <span class="kss-title__ref">
-              1.2.2
+              1.3.2
               <span class="kss-title__permalink-hash">
                   #application.global.variables
               </span>
@@ -260,7 +260,7 @@ styles.</p>
         <h2 class="kss-title kss-title--level-2">
           <a class="kss-title__permalink" href="#kssref-application-layout">
             <span class="kss-title__ref">
-              1.3
+              1.4
               <span class="kss-title__permalink-hash">
                   #application.layout
               </span>
