Added the  variable

--- a/styleguide/index.html
+++ b/styleguide/index.html
@@ -109,6 +109,7 @@
 <li>Fixed gulp image path</li>
 <li>Fixed styleguide typo</li>
 <li>Added the <code>$button-letter-spacing</code>, <code>$anchor-color-visited</code> and <code>$anchor-text-decoration-visited-hover</code> variables</li>
+<li>Added the <code>$global-min-width</code> variable</li>
 </ul>
 <h4 id="v4-0-0-june-21-2017-">v4.0.0 (June 21, 2017)</h4>
 <ul>
