Installed  node module to fix webpack error with json files

--- a/styleguide/index.html
+++ b/styleguide/index.html
@@ -110,6 +110,7 @@
 <li>Fixed styleguide typo</li>
 <li>Added the <code>$button-letter-spacing</code>, <code>$anchor-color-visited</code> and <code>$anchor-text-decoration-visited-hover</code> variables</li>
 <li>Added the <code>$global-min-width</code> variable</li>
+<li>Installed <code>json-loader</code> node module to fix webpack error with json files (<a href="https://github.com/request/request/issues/1529#issuecomment-103454943">https://github.com/request/request/issues/1529#issuecomment-103454943</a>)</li>
 </ul>
 <h4 id="v4-0-0-june-21-2017-">v4.0.0 (June 21, 2017)</h4>
 <ul>
